<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="716dp"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llGSign"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                android:backgroundTint="#0D23EC"
                android:text="@string/g_sign_in"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llFSign"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/llGSign">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="#0D23EC"
                android:text="@string/facebook_sign_in"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llMSign"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/llFSign">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="40dp"
                android:text="@string/login"
                android:textColor="#444444"
                android:textSize="20sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/editext_bg"
                    android:enabled="false"
                    android:maxLength="10"
                    android:paddingHorizontal="10dp"
                    android:text="@string/_91"
                    android:textColor="#1F1F1F" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editext_bg"
                    android:inputType="phone"
                    android:maxLength="18"
                    android:paddingHorizontal="10dp"
                    android:textColor="#1F1F1F" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/oneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editext_bg"
                    android:inputType="phone"
                    android:paddingHorizontal="10dp"
                    android:textColor="#1F1F1F"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resendVerification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/don_t_get_the_code_resend_verification_code"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:visibility="gone" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:background="#6372FF"
                android:backgroundTint="#6372FF"
                android:text="@string/login"
                android:textColor="#ffffff" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginVBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:background="#6372FF"
                android:backgroundTint="#6372FF"
                android:text="@string/login_verify"
                android:textColor="#ffffff"
                android:visibility="gone" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>